# Lehrer-lyrics

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: fastapi-cloud.md  lehrer-scrape.md
lehrer_lyrics/scraper/: cli.py  converter.py  parser.py
lehrer_lyrics/service/: main.py  songs.db
src/lehrer_lyrics/scraper/: cli.py  converter.py  fetcher.py  models.py  parser.py
src/lehrer_lyrics/service/: main.py  style.css
src/lehrer_lyrics/service/songs/: a-christmas-carol.md
tests/scraper/: test_cli_build_db.py  test_cli_download.py  test_cli_pdf_to_markdown.py  test_cli_scrape.py  test_converter.py  test_fetcher.py  test_parser.py
tests/service/: test_main.py
